--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@
 }@font-face {
     font-family: AmsiBoldItalic;
     src: url(./fonts/AmsiProAKSNormal-BoldItalic.ttf);
+}@font-face {
+    font-family: AmsiUltra;
+    src: url(./fonts/AmsiProAKSNormal-Ultra.ttf);
 }
 
 /*Body*/
@@ -17,8 +20,6 @@ body{
     padding: 0;
     margin: 0;
     background-color: rgb(59, 53, 46);
-    background-image:
-        linear-gradient(to bottom, rgba(245, 246, 252, 0) 0%, rgb(59, 53, 46) 100vh), url('images/Background1.jpg');
     background-size:auto;
     background-repeat: no-repeat;
     background-size: 100% auto;
@@ -43,21 +44,28 @@ h3{
 
 article{
     margin: 3% 12.5%;
-    padding: 10px 50px;
+    padding: 2% 1%;
     background: rgba(0, 0, 0, 0.4);
     min-height: 600px;
     border-radius: 25px;
 }
 
 p{
-    font-size: 40px;
+    font-size: 30px;
     line-height: 1.25;
     word-spacing: 5px;
+}
+
+li{
+    font-size: 20px;
+    margin-left: 2%;
+    line-height: 2;
 }
 
 iframe{
     display: block;
     margin: 3% auto;
+    max-width: 100%;
 }
 
 
@@ -67,7 +75,7 @@ iframe{
 }
 
 .Logo{
-    width: 40vh;
+    width: 35vh;
     vertical-align: middle;
 }
 
@@ -88,11 +96,6 @@ iframe{
     float: right;
 }
 
-.cover{
-    border-radius: 10px;
-    width: 375px;
-    padding-top: 30px;
-}
 
 .center{
     display: block;
@@ -135,7 +138,7 @@ iframe{
 /*Navigation*/
 nav{
     margin: 0 12.5%;
-    padding: 20px;
+    padding: 2vw;
     word-spacing: 5.5vh;
 }
 
@@ -153,7 +156,7 @@ header nav {
 }
 
 nav a{
-    font-size: 2.25vh;
+    font-size: 1.5vw;
     font-family: LogoFont;
     text-decoration: none;
     color: white;
