--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ iframe{
 }
 
 .Logo{
-    width: 35vh;
+    width: 17vw;
     vertical-align: middle;
 }
 
@@ -139,7 +139,7 @@ iframe{
 nav{
     margin: 0 12.5%;
     padding: 2vw;
-    word-spacing: 5.5vh;
+    word-spacing: 3vw;
 }
 
 .colorramp{
