--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ p{
 }
 
 article{
-    margin: 3% 12.5%;
+    margin: 3% 10vw;
     padding: 2% 5%;
     background: rgba(0, 0, 0, 0.4);
     min-height: 600px;
