--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body{
 h1{
     max-lines: 1;
     font-family: AmsiBoldItalic;
-    font-size: 4vw;
+    font-size: 75px;
     margin: 0;
 }
 h2{
@@ -44,11 +44,11 @@ h2{
     line-height: 3vw;
 }
 h3{
-    font-size: 1.25vw;
+    font-size: 25px;
 }
 h4{
-    font-size: 1vw;
-    line-height: 1.5vw;
+    font-size: 25px;
+    line-height: 30px;
 }
 h5{
     font-size: 0.75vw;
@@ -69,12 +69,17 @@ article{
     background: rgba(0, 0, 0, 0.4);
     min-height: 600px;
     border-radius: 25px;
+    overflow: hidden;
 }
 
 li{
     font-size: 20px;
     margin-left: 2%;
     line-height: 2;
+}
+
+li::marker{
+    font-size: 80px;
 }
 
 iframe{
@@ -297,4 +302,8 @@ footer li, footer ul{
     transform: scale(1.05);
     border: 2px white solid;
     transition: 0.1s;
+}
+
+.link:hover{
+    text-decoration: underline 2px white;
 }
