--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
 body{
     padding: 0;
     margin: 0;
-    background-color: grey;
+    background-color: rgb(48, 48, 48);
     background-size:auto;
     background-repeat: no-repeat;
     background-size: 100% auto;
