--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ iframe{
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0,0,0,0.8);
+  background-image: radial-gradient(rgba(37, 0, 32, 1), rgba(51, 25, 0, 1),black);
   z-index: 2;
 }
 
@@ -109,7 +109,6 @@ iframe{
     display: flex;
     flex-wrap: wrap;
     font-size: 30px;
-    text-align: center;
   }
 
 .flex-item1{
