--- a/styles.css
+++ b/styles.css
@@ -367,3 +367,26 @@ footer li, footer ul{
     line-height: 2em;
 
 }
+
+.downloadbtn{
+    background-color:#000000a1;
+    width: 30em;
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    border: white 0.2em solid;
+    border-radius: 1em;
+    color: white;
+    transition: 0.1s;
+}
+
+.downloadbtn:hover, .downloadbtn p{
+    background-color: #4d4d4da1;
+    text-decoration: underline white;
+    cursor:pointer;
+}
+
+.download{
+    text-decoration: none;
+}
