--- a/styles.css
+++ b/styles.css
@@ -350,6 +350,9 @@ footer li, footer ul{
         display: block;
         position: absolute;
     }
+    h1{
+        font-size:2.5em;
+    }
 }
 
 @media only screen and (max-width: 1550px) {
