--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body{
 h1{
     max-lines: 1;
     font-family: AmsiBoldItalic;
-    font-size: 3em;
+    font-size: 3.5em;
     margin: 0;
 }
 h2{
@@ -401,4 +401,19 @@ footer li, footer ul{
 
 .download{
     text-decoration: none;
+}
+
+li p{
+    margin: 0;
+    line-height: 1.5;
+    font-size: 1.5em;
+    line-height: 1.1;}
+li h2{
+    font-family: AmsiBold;
+    font-size: 2.5em;
+    line-height: 1;
+}
+
+li::marker{
+    font-size: 4em;
 }
