--- a/styles.css
+++ b/styles.css
@@ -325,7 +325,7 @@ footer li, footer a{
     text-decoration: none;
     cursor: pointer;
     font-family: AmsiSemiBoldItalic;
-    font-size: 1.5vh;
+    font-size: 0.75em;
 }
 
 footer a:hover{
