--- a/styles.css
+++ b/styles.css
@@ -326,6 +326,7 @@ footer li, footer a{
     cursor: pointer;
     font-family: AmsiSemiBoldItalic;
     font-size: 0.75em;
+    line-height: 1.5em;
 }
 
 footer a:hover{
@@ -334,7 +335,7 @@ footer a:hover{
 
 footer h3{
     font-family: AmsiSemiBold;
-    font-size: 2.25vh;
+    font-size: 1em;
 }
 
 .footerconent{
