--- a/styles.css
+++ b/styles.css
@@ -402,7 +402,7 @@ footer li, footer ul{
         display: none;
     }
     .Logo{
-        width: 65vw;
+        width: 20em;
         display: block;
 
     }
